--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -76,7 +76,7 @@
 		
 		<!-- All app pages go here -->
 		
-		<div class="home-tpl">
+		<div class="home-tpl hidden">
 
 			<a href="javascript:void(0);" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 
@@ -93,7 +93,7 @@
 		</div>
 		<!-- END home-tpl -->
 		
-		<div class="plenary-tpl hidden">
+		<div class="plenary-tpl">
 			<div class="bar bar-header">
 				<a href="javascript:void(0)" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 	
@@ -114,6 +114,188 @@
 			<div class="row">
 				<div class="col content-wrapper">
 				
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
 					<div class="row short-preview">
 						<div class="col-67 description">
 							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
