--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<meta http-equiv="x-ua-compatible" content="IE=edge" />
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-touch-fullscreen" content="yes">
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
@@ -34,14 +37,15 @@
 <!-- plenary-tpl -->
 <script id="plenary-tpl" type="text/x-handlebars-template">
 	<div class="plenary-tpl">
-		<div class="bar bar-header">
+		<div class="bar bar-header" style="position: fixed;">
 			<a href="javascript:void(0)" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+
 			<h1 class="title">Пленарни заседания</h1>
-			<button class="search-btn button button-icon" id="btnSearchPlenary">
+			<button class="search-btn button button-icon">
 				<img src="assets/img/search-icon.png" alt="ico" class="ico">
 			</button>
 		</div>
-
+		
 		<div class="row search-row">
 			<div class="col">
 				<div class="search-wrapper">
@@ -49,220 +53,175 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="row">
 			<div class="col content-wrapper">
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+			
+				{{#each plenary}}
+				<div class="row short-preview plenariesListItem" data-list-item-id="{{pid}}">
+					<div class="col-67 description" onclick="openAppUrl('#plenaryDetail?id={{pid}}');">
+						{{{dscrShort}}}
 					</div>
 					<div class="col-33">
 						<div class="custom-row">
-							<div class="date">12.04.2014</div>
+							<div class="date">{{startDate}}</div>
+							{{#ifCond startDate endDate}}
+							{{else}}
+								<div class="date">{{endDate}}</div>
+							{{/ifCond}}
 						</div>
 						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#plenaryDetail?id={{pid}}');">
+								<span class="txt">Преглед</span>
+							</button>
 						</div>
 					</div>
 				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
-				<div class="row short-preview">
-					<div class="col-67 description">
-						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-					</div>
-					<div class="col-33">
-						<div class="custom-row">
-							<div class="date">12.04.2014</div>
-						</div>
-						<div class="custom-row">
-							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-						</div>
-					</div>
-				</div>
+				{{/each}}
+
 			</div>
 		</div>
-		            <div class="bar bar-footer">	                
-		                <button class="back-btn button button-icon">
-		                <img src="assets/img/back-arrow.png" alt="ico" class="ico">
-		                </button>
-		            </div>
+		
+		<div class="bar bar-footer">					
+			<button class="back-btn button button-icon" id="footerBackButton">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>					
+			<button class="button button-icon ion-ios7-gear" id="footerSettingsButton"></button>
+		</div>
 	</div>
 </script>
 <!-- END plenary-tpl -->
 
 
+<!-- plenary-tpl detail -->
+<script id="plenary-tpl-detail-preview" type="text/x-handlebars-template">
+	<div class="plenary-tpl-detail-preview">
 
-	<div class="snap-drawers">
-		<div class="snap-drawer snap-drawer-left left-menu" id="side-menu">
-			<div class="row header">
-			  <div class="col-25 armorial">
-			  	<img src="assets/img/bulgarian-armorial.svg" alt="bulgarian-armorial">
-			  </div>
-			  <div class="col-75 title center">
-			  	<h1>Народно събрание на</h1>
-			  	<h2>република България</h2>
-			  </div>
-			</div>
-			<div class="row">
-				<h3 class="group-title">Меню</h3>
-			</div>
-			<ul class="menu-sections">
-				<li class="row">
-					<a href="#plenary" class="col section">
-						<span class="flag"></span>
-						<span class="ico"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></span>
-						<span class="txt">Пленарни заседания</span>
-					</a>
-				</li>
-				<li class="row active">
-					<a href="#" class="col section">
-						<span class="flag"></span>
-						<span class="ico"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></span>
-						<span class="txt">Парламентарен контрол</span>
-					</a>
-				</li>
-				<li class="row">
-					<a href="#" class="col section">
-						<span class="flag"></span>
-						<span class="ico"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></span>
-						<span class="txt">Заседания на парламентарни комисии</span>
-					</a>
-				</li>
-				<li class="row">
-					<a href="#" class="col section">
-						<span class="flag"></span>
-						<span class="ico"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></span>
-						<span class="txt">Новини</span>
-					</a>
-				</li>
-			</ul>
+		<div class="bar bar-header" style="position: fixed;">
+			<a href="javascript:void(0)" id="open-left" class="ion-navicon-round side-menu-btn"></a>
+			<h1 class="title">Пленарни заседания</h1>
 		</div>
-		<div class="snap-drawer snap-drawer-right"></div>
+
+		<div class="row">
+			<div class="col content-wrapper">
+				<div class="row detail-preview">
+					<div class="col">
+						<div class="row">
+							<h2 class="title">Пленарно заседание</h2>
+						</div>
+						<div class="row">
+							<div class="custom-row">
+								<div class="date">{{startDate}}</div>
+								{{#ifCond startDate endDate}}
+								{{else}}
+									<div class="date-separator">-</div>
+									<div class="date">{{endDate}}</div>
+								{{/ifCond}}
+							</div>
+						</div>
+						<div class="row">
+							<div class="col description">
+								{{#each agenda}}
+									<div style="margin-bottom: 10px;">
+									{{id}}. {{itemText}}
+									{{#ifCond isBill '1'}}
+										<ul class="external-link-wrapper">
+
+										{{#each bills}}
+											<li>
+												<a href="javascript:openUrlInExternal('{{link}}')" class="external-link">{{name}}</a>
+											</li>
+										{{/each}}
+
+										{{#each docs}}
+											<li>
+												<a  href="javascript:openUrlInExternal('{{link}}')" class="file-link">{{name}}</a>
+											</li>
+										{{/each}}
+
+										</ul>
+									{{/ifCond}}
+									</div>
+								{{/each}}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="bar bar-footer">					
+			<button class="back-btn button button-icon" id="footerBackButton">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>					
+			<button class="button button-icon ion-ios7-gear" id="footerSettingsButton"></button>
+		</div>
+	</div>
+</script>
+<!-- END plenary-tpl detail -->
+
+
+
+
+<div class="snap-drawers">
+	<div class="snap-drawer snap-drawer-left left-menu">
+		<div class="row header">
+			<div class="col-25 armorial">
+				<img src="assets/img/bulgarian-armorial.svg" alt="bulgarian-armorial">
+			</div>
+			<div class="col-75 title center">
+				<h1>Народно събрание на</h1>
+				<h2>република България</h2>
+			</div>
+		</div>
+		<div class="row">
+			<h3 class="group-title">Меню</h3>
+		</div>
+		<ul class="menu-sections">
+			<li class="row liMainMenuItem" id="liMainMenuPlenaries">
+				<a href="javascript:void(0);" class="col section" id="mainMenuPlenary">
+					<span class="flag-active"></span>
+					<span class="flag-new">ново</span>
+					<span class="ico"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></span>
+					<span class="txt">Пленарни заседания</span>
+				</a>
+			</li>
+			<li class="row liMainMenuItem" id="liMainMenuControll">
+				<a href="javascript:void(0);" class="col section" id="mainMenuControll">
+					<span class="flag-active"></span>
+					<span class="flag-new">ново</span>
+					<span class="ico"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></span>
+					<span class="txt">Парламентарен контрол</span>
+				</a>
+			</li>
+			<li class="row liMainMenuItem" id="liMainMenuCommittee">
+				<a href="javascript:void(0);" class="col section" id="mainMenuCommittee">
+					<span class="flag-active"></span>
+					<span class="flag-new">ново</span>
+					<span class="ico"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></span>
+					<span class="txt">Заседания на парламентарни комисии</span>
+				</a>
+			</li>
+			<li class="row liMainMenuItem" id="liMainMenuNews">
+				<a href="javascript:void(0);" class="col section" id="mainMenuNews">
+					<span class="flag-active"></span>
+					<span class="flag-new">ново</span>
+					<span class="ico"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></span>
+					<span class="txt">Новини</span>
+				</a>
+			</li>
+		</ul>
+	</div>
+	<div class="snap-drawer snap-drawer-right"></div>
+</div>
+
+
+<div id="content" class="snap-content">
+		
+	<div id="page-placeholder" class="placeholder-container" data-snap-ignore="true">
 	</div>
 
-	<div id="content" class="snap-content" style="position: fixed;">
-		<div id="toolbar" class="placeholder-container">
-			
-			<div id="page-placeholder" class="placeholder-container">
-			</div>
-
-		</div>
-	</div>
+</div>
 	
 
 <script type="text/javascript" src="js/tools.js"></script>
@@ -270,7 +229,6 @@
 <script src="lib/jquery.js"></script>
 <script src="lib/fastclick.js"></script>
 <script src="lib/handlebars.js"></script>
-<script src="lib/pageslider.js"></script>
 <script src="lib/snap.js"></script>
 
 <script src="js/adapters/FileStorage.js"></script>
@@ -291,13 +249,7 @@
 		disable: 'right'
 	});
 
-	$('#open-left').unbind().bind('click', function() {
-		if (snapper.state().state == "left") {
-			snapper.close();
-		} else {
-			snapper.open('left');
-		}
-	});
+	assignSliderOpenHandler();
 </script>
 
 
